24.04.2020
[*] deprecated class contructor call fixed

26.04.2020
[+] composer