@@ -10,16 +10,29 @@
 ##                                                                             ##
 #################################################################################
 
-//heef npc uitzondering omdat die met speciaal $_post werken
-if(isset($_POST)){
-	if(!isset($_POST['ft'])){
-	$_POST = @array_map('mysql_real_escape_string', $_POST);
-	$_POST = array_map('htmlspecialchars', $_POST);
-	}
+function protectIncomingData(array &$data): void
+{
+    global $database;
+    $connection = $database->connection;
+    
+    if ($connection instanceof \mysqli) {
+        $data = array_map(function ($item) use ($connection) {
+            return $connection->real_escape_string($item);
+        }, $data);
+    } else {
+        $data = array_map('mysql_real_escape_string', $data);
+    }
+    
+    $data = array_map('htmlspecialchars', $data);
 }
-			$rsargs=$_GET['rsargs'];
-$_GET = array_map('mysql_real_escape_string', $_GET);
-$_GET = array_map('htmlspecialchars', $_GET);
-			$_GET['rsargs']=$rsargs;
-$_COOKIE = array_map('mysql_real_escape_string', $_COOKIE);
-$_COOKIE = array_map('htmlspecialchars', $_COOKIE);
+
+// has npc exception because they work with special $_post
+if (!isset($_POST['ft'])){
+    protectIncomingData($_POST);
+}
+
+$rsargs = $_GET['rsargs'];
+protectIncomingData($_GET);
+$_GET['rsargs'] = $rsargs;
+
+protectIncomingData($_COOKIE);
